--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 dist: trusty
 language: java
 jdk:
-  - oraclejdk8
+- oraclejdk8
 before_install:
-  - export TZ=Brazil/East
+- export TZ=Brazil/East
 deploy:
   provider: heroku
   api_key:
     secure: $KEY
-  app: apiwallet
+  app: $APP
