--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 deploy:
   provider: heroku
   api_key:
-    - secure: $KEY
-  app: apiwallet
+    - secure: $SECURE_KEY
+  app: $APP
   on:
     repo: vitoralves/walletAPI
