travis secure key

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ before_install:
 - export TZ=Brazil/East
 deploy:
   provider: heroku
-  api_key:
-    - secure: $SECURE_KEY
+  secure: $SECURE_KEY
   app: $APP
