--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
 - export TZ=Brazil/East
 deploy:
   provider: heroku
-  secure: $SECURE_KEY
+  api_key:
+    secure: $SECURE_KEY
   app: $APP
