--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 deploy:
   provider: heroku
   api_key:
-    secure: $SECURE_KEY
+    secure: "1e8d5d08-9e04-4169-a5fc-463521d44428"
   app: $APP
